<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    
    <string name="bill_text_view">Bill</string>
    <string name="bill_edit_text">0.00</string>
    
    <string name="tip_text_text">Tip %</string>
    <string name="tip_edit_text">15</string>

    <string name="final_text_view">Final Bill</string>
	<string name="final_bill_edit_text">0.00</string>
	
	<string name="tip_Slider">Tip Slider</string>
	
	<string name="introductionTV">Introduction</string>
	
	<string name="friendly_box">Friendly</string>
	<string name="scpecials_box">Specials</string>
	<string name="opinion_box">Opinion</string>
	
	<string name="availabilityTV">Availability</string>
	<string name="good_radio_button">Good</string>
	<string name="ok_radio_button">OK</string>
	<string name="bad_radio_button">Bad</string>
	
	<string name="time_waitingTV">Time Waiting for Service:</string>
	<string name="start_chronometer_button">Start</string>
	<string name="pause_chronometer_button">Pause</string>
	<string name="reset_chronometer_button">Reset</string>
	
	<string name="service_text">Service</string>
	<string-array name="problem_solving">
	    <item>Bad</item>
	    <item>OK</item>
	    <item>Good</item>
	</string-array>

	
	<string name="tip_Slider_Value">15</string>
	<string name="numberofPpl_text"># of People</string>
	<string name="people_edit_text">1</string>
	
</resources>
