<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:columnCount="1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".TipCalc" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="5dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp" >

            <TextView
                android:id="@+id/waitressNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/placeTV"
                android:text="Name"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/placeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageWaitress"
                android:text="Place"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageWaitress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/line" >
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp" >

        <TextView
            android:id="@+id/billTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/bill_text_view"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/billEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroundedittext"
            android:ems="4"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:nextFocusDown="@+id/tipEditText1"
            android:singleLine="true"
            android:text="@string/bill_edit_text"
            android:textColor="#ffffff"
            android:textCursorDrawable="@null" />

        <TextView
            android:id="@+id/tipTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="28dp"
            android:paddingRight="10dp"
            android:text="@string/tip_text_text"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/tipEditText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroundedittext"
            android:ems="4"
            android:gravity="center"
            android:inputType="number"
            android:text="@string/tip_edit_text"
            android:textColor="#ffffff"
            android:textCursorDrawable="@null" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp" >

        <TextView
            android:id="@+id/tip_SliderTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/tip_Slider"
            android:textColor="#ffffff" />

        <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:progress="15" />

        <TextView
            android:id="@+id/tipSliderValueTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/tip_Slider_Value"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/introductionTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introductionTV"
            android:textColor="#ffffff"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp" >

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opinion_box"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friendly_box"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scpecials_box"
            android:textColor="#ffffff"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/availabilityTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/availabilityTV"
        android:textColor="#ffffff"
        android:textSize="15sp" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_radio_button"
            android:textColor="#ffffff" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_radio_button"
            android:textColor="#ffffff" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bad_radio_button"
            android:textColor="#ffffff" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp" >

        <Spinner
            android:id="@+id/problem_Spinner"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/backgroundedittext"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/numberPPlTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:paddingRight="5dp"
            android:text="@string/numberofPpl_text"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/lessButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:background="@drawable/backgroundedittext"
            android:gravity="center"
            android:text="-"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/currentNumberOfPplTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/people_edit_text"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/plusButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:background="@drawable/backgroundedittext"
            android:text="+"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center"
        android:paddingBottom="10dp" >

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@drawable/backgroundedittext"
            android:text="@string/start_chronometer_button"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <Button
            android:id="@+id/buttonPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@drawable/backgroundedittext"
            android:text="@string/pause_chronometer_button"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <Button
            android:id="@+id/resetbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroundedittext"
            android:text="@string/reset_chronometer_button"
            android:textColor="#ffffff"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center"
        android:paddingBottom="10dp" >

        <TextView
            android:id="@+id/timeWaitingTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="@string/time_waitingTV"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <Chronometer
            android:id="@+id/chronometer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroundedittext"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="Chronometer"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/finalBillTextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/final_text_view"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/resultTextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/final_bill_edit_text"
            android:textColor="#ffffff"
            android:textSize="30sp" />
    </LinearLayout>

</TableLayout>